[gd_scene load_steps=9 format=2]

[ext_resource path="res://PlayerBody/PlayerBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://2DPlatformerController/2DPlatformerController.gd" type="Script" id=2]
[ext_resource path="res://Textures/BodyPart0000.png" type="Texture" id=3]
[ext_resource path="res://Textures/BodyPart0001.png" type="Texture" id=4]
[ext_resource path="res://Textures/BodyPart0003.png" type="Texture" id=5]
[ext_resource path="res://SpringSprite/SpringSprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://Textures/Shadow0000.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.1849
height = 43.1584

[node name="2DPlatformerController" type="Node2D"]

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.6 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
offset = Vector2( 0, 1 )

[node name="RightHand" parent="." instance=ExtResource( 6 )]
position = Vector2( 12, 12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
stiffness = 13.0
target_node_path = NodePath("../Player/PlayerBody/Body/TorsoPos/RightHandPos")

[node name="Player" type="KinematicBody2D" parent="."]
collision_layer = 2
script = ExtResource( 2 )
speed = 25.0
max_speed = 400.0
damping = 0.8
gravity = 24.0
min_jump_speed = -250.0
jump_speed = -600.0

[node name="ShadowCast" type="RayCast2D" parent="Player"]
enabled = true
cast_to = Vector2( 0, 500 )

[node name="PlayerBody" parent="Player" instance=ExtResource( 1 )]
position = Vector2( 0, 12 )

[node name="Hitbox" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Timers" type="Node" parent="Player"]

[node name="GroundedTimer" type="Timer" parent="Player/Timers"]
wait_time = 0.1
one_shot = true

[node name="JumpPressTimer" type="Timer" parent="Player/Timers"]
wait_time = 0.1
one_shot = true

[node name="Head" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -18 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
stiffness = 13.0
target_node_path = NodePath("../Player/PlayerBody/Body/TorsoPos/HeadPos")

[node name="LeftEye" parent="." instance=ExtResource( 6 )]
position = Vector2( -3, -18 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
stiffness = 12.0
target_node_path = NodePath("../Player/PlayerBody/Body/TorsoPos/HeadPos/LeftEyePos")

[node name="RightEye" parent="." instance=ExtResource( 6 )]
position = Vector2( 6, -21 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
stiffness = 12.0
target_node_path = NodePath("../Player/PlayerBody/Body/TorsoPos/HeadPos/RightEyePos")

[node name="LeftHand" parent="." instance=ExtResource( 6 )]
position = Vector2( -12, 12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
stiffness = 13.0
target_node_path = NodePath("../Player/PlayerBody/Body/TorsoPos/LeftHandPos")
